--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tempfile = "3.0"
 itertools = "0.7"
 shlex = "0.1"
 toml-query = "0.7"
+glob = "0.3.0"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
