--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -2,6 +2,7 @@
 title = "mdBook Documentation"
 description = "Create book from markdown files. Like Gitbook but implemented in Rust"
 authors = ["Mathieu David", "Michael-F-Bryan"]
+language = "en"
 
 [output.html]
 mathjax-support = true
