Update specified minimum Rust version and test it in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
       env: TARGET=x86_64-unknown-linux-gnu
     - rust: nightly
       env: TARGET=x86_64-unknown-linux-gnu
+    - rust: 1.34.0 # Minimum required Rust version
+      env: TARGET=x86_64-unknown-linux-gnu
 
     - rust: stable
       os: osx
