--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,7 @@ notify = { version = "4.0", optional = true }
 gitignore = { version = "1.0", optional = true }
 
 # Serve feature
-iron = { version = "0.6", optional = true }
-staticfile = { version = "0.5", optional = true }
+simple-server = { version = "0.4", optional = true }
 ws = { version = "0.9", optional = true}
 
 # Search feature
@@ -56,7 +55,7 @@ walkdir = "2.0"
 default = ["watch", "serve", "search"]
 debug = []
 watch = ["notify", "gitignore"]
-serve = ["iron", "staticfile", "ws"]
+serve = ["simple-server", "ws"]
 search = ["elasticlunr-rs", "ammonia"]
 
 [[bin]]
