--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,9 +39,9 @@ notify = { version = "4.0", optional = true }
 gitignore = { version = "1.0", optional = true }
 
 # Serve feature
-iron = { version = "0.6", optional = true }
-staticfile = { version = "0.5", optional = true }
-ws = { version = "0.9", optional = true}
+futures-util = { version = "0.3.4", optional = true }
+tokio = { version = "0.2.18", features = ["macros"], optional = true }
+warp = { version = "0.2.2", default-features = false, features = ["websocket"], optional = true }
 
 # Search feature
 elasticlunr-rs = { version = "2.3", optional = true, default-features = false }
@@ -55,7 +55,7 @@ walkdir = "2.0"
 [features]
 default = ["watch", "serve", "search"]
 watch = ["notify", "gitignore"]
-serve = ["iron", "staticfile", "ws"]
+serve = ["futures-util", "tokio", "warp"]
 search = ["elasticlunr-rs", "ammonia"]
 
 [[bin]]
