--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ warp = { version = "0.2.2", default-features = false, features = ["websocket"], 
 # Search feature
 elasticlunr-rs = { version = "2.3", optional = true, default-features = false }
 ammonia = { version = "3", optional = true }
+fluent-templates = { version = "0.4.6", features = ["handlebars"] }
+unic-langid = "0.9.0"
 
 [dev-dependencies]
 select = "0.4"
