--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde_json = "1.0"
 shlex = "0.1"
 tempfile = "3.0"
 toml = "0.5.1"
+base64 = "0.12.3"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
