--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ ammonia = { version = "3", optional = true }
 
 [dev-dependencies]
 select = "0.5"
+semver = "0.11.0"
 pretty_assertions = "0.6"
 walkdir = "2.0"
 
