--- a/guide/book.toml
+++ b/guide/book.toml
@@ -25,3 +25,6 @@ boost-hierarchy = 2
 boost-paragraph = 1
 expand = true
 heading-split-level = 2
+
+[output.html.redirect]
+"/format/config.html" = "configuration/index.html"
