--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde_json = "1.0"
 shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
+topological-sort = "0.1.0"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
