--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ gitignore = { version = "1.0", optional = true }
 
 # Serve feature
 futures-util = { version = "0.3.4", optional = true }
-tokio = { version = "0.2.18", features = ["macros"], optional = true }
-warp = { version = "0.2.2", default-features = false, features = ["websocket"], optional = true }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
+warp = { version = "0.3.1", default-features = false, features = ["websocket"], optional = true }
 
 # Search feature
 elasticlunr-rs = { version = "2.3", optional = true, default-features = false }
