--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
 topological-sort = "0.1.0"
+url = "2.2.2"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
