--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde_json = "1.0"
 shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
+syntect = { version = "4.6.0", default-features = false, features = ["regex-onig", "parsing", "html", "dump-load", "yaml-load"] }
 
 # Watch feature
 notify = { version = "4.0", optional = true }
@@ -62,3 +63,8 @@ search = ["elasticlunr-rs", "ammonia"]
 [[bin]]
 doc = false
 name = "mdbook"
+
+# For profiling only.
+# If this ends up uncommented in a commit, let me know.
+[profile.release]
+debug = true
