--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
 topological-sort = "0.1.0"
+syntect = { version = "4.6.0", default-features = false, features = ["regex-onig", "parsing", "html", "dump-load", "yaml-load"] }
 
 # Watch feature
 notify = { version = "4.0", optional = true }
@@ -65,3 +66,8 @@ search = ["elasticlunr-rs", "ammonia"]
 [[bin]]
 doc = false
 name = "mdbook"
+
+# For profiling only.
+# If this ends up uncommented in a commit, let me know.
+[profile.release]
+debug = true
