--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ description = "Creates a book from markdown files"
 
 [dependencies]
 anyhow = "1.0.28"
-chrono = "0.4"
 clap = "2.24"
 env_logger = "0.7.1"
 handlebars = "4.0"
@@ -33,6 +32,7 @@ serde_json = "1.0"
 shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
+time = { version = "0.3", default-features = false, features = ["std", "formatting", "local-offset"] }
 topological-sort = "0.1.0"
 
 # Watch feature
