--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
 topological-sort = "0.1.0"
+lewp-css = "0.2"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
