--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,13 @@ license = "MPL-2.0"
 readme = "README.md"
 repository = "https://github.com/rust-lang/mdBook"
 description = "Creates a book from markdown files"
+features = ["edition2021"]
 
 [dependencies]
 anyhow = "1.0.28"
 chrono = "0.4"
-clap = { version = "3.2.1", features = ["cargo"] }
-clap_complete = "3.2.1"
+clap = { version = "3.2.0", features = ["cargo"] }
+clap_complete = "3.2.0"
 env_logger = "0.7.1"
 handlebars = "4.0"
 lazy_static = "1.0"
