--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ topological-sort = "0.2.2"
 tower-http = "0.6.8"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+url = "2.5.8"
 walkdir = "2.5.0"
 
 [package]
