--- a/crates/mdbook-driver/Cargo.toml
+++ b/crates/mdbook-driver/Cargo.toml
@@ -16,6 +16,7 @@ mdbook-markdown.workspace = true
 mdbook-preprocessor.workspace = true
 mdbook-renderer.workspace = true
 mdbook-summary.workspace = true
+pulldown-cmark-to-cmark.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -24,6 +25,7 @@ tempfile.workspace = true
 toml.workspace = true
 topological-sort.workspace = true
 tracing.workspace = true
+url.workspace = true
 
 [lints]
 workspace = true
