--- a/crates/mdbook-core/Cargo.toml
+++ b/crates/mdbook-core/Cargo.toml
@@ -9,6 +9,7 @@ rust-version.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+ignore.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
